--- a/assets/index.html
+++ b/assets/index.html
@@ -7,9 +7,9 @@
     <title>Redirect2me HTTPS Proxy</title>
   </head>
   <body>
-    <main>
+    <main class="container">
         <h1>
-            <img src="/favicon.svg" style="width:24pt;height:24pt;margin-top:-4pt;">
+            <img src="/favicon.svg" style="width:24pt;height:24pt;margin-top:-4pt;" />
             Redirect2me HTTPS Proxy
         </h1>
     </main>
