README and support file updates

--- a/assets/index.html
+++ b/assets/index.html
@@ -3,15 +3,21 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/css/pico.min.css">
+    <link rel="stylesheet" href="css/pico.min.css">
     <title>Redirect2me HTTPS Proxy</title>
   </head>
   <body>
     <main class="container">
         <h1>
-            <img src="/favicon.svg" style="width:24pt;height:24pt;margin-top:-4pt;" />
-            Redirect2me HTTPS Proxy
+            <img src="favicon.svg" style="width:24pt;height:24pt;margin-top:-4pt;margin-right:4pt;" />
+            HTTPS Proxy
         </h1>
+
+		<p>A proxy server that handles HTTPS, including certificate provisioning and renewal.</p>
+
+		<p><a href="https://github.com/redirect2me/https-proxy">How this works</a>, including source code!</p>
+
+		<p style="text-align:center"><small>A service of <a href="https://www.redirect2.me/">Redirect2Me</a></small></p>
     </main>
   </body>
 </html>
